--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
 </head>
 <body>
     
-    <script src="index.js">
-
-   </script>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+    <div>
+        <p id="actualWinner"> Who is the winner of the round? </p>
+        <p id="playerScore">Your Score: 0</p>
+        <p id="computerScore">Computer Score: 0</p>
+    </div>
+    <script src= "script.js">  </script>
 </body>
 </html>
